--- a/config.json
+++ b/config.json
@@ -1,16 +1,16 @@
 {
-	// Get input from browser, 
-	// save chunks locally, send chunks to server
+
 	"input": {
 		"INPUT_CHUNK_LENGTH": 5000,
 		"VIDEO_SAVE_PATH": "video.mp4",
 		"AUDIO_SAVE_PATH": "audio.webm"
 	},
-	// Server sends back json with results from input-processing
+
 	"intermediate": {
 		"JSON_SAVE_PATH": "results.json",
+		"TRANSCRIPT_SAVE_PATH": "transcript.txt"
 	},
-	// This json stores final information (including final transcript)
+
 	"final": {
 		"FINAL_SAVE_PATH": "final_results.json"
 	}
