--- a/package.json
+++ b/package.json
@@ -4,11 +4,21 @@
   "description": "",
   "main": "script.js",
   "dependencies": {
-    "firebase": "^4.9.0"
+    "browser-sync": "^2.23.5",
+    "child_process": "^1.0.2",
+    "express": "^4.16.2",
+    "firebase": "^4.9.0",
+    "firebase-admin": "^5.8.1",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-notify": "^3.2.0",
+    "gulp-sass": "^3.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "gulp": "gulp"
   },
   "repository": {
     "type": "git",
