--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gulp-cli": "^2.0.0",
     "gulp-nodemon": "^2.2.1",
     "gulp-notify": "^3.2.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "python-shell": "^0.4.0"
   },
   "devDependencies": {},
   "scripts": {
